🗒️😅 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Unit 8 Project
 Requirements
-[  ] Custom Function #1 - Called Multiple Times
-[  ] Custom Function #2 - Takes Parameters
-[  ] Custom Function #3
+[yes  ] Custom Function #1 - Called Multiple Times
+[ yes ] Custom Function #2 - Takes Parameters
+[yes  ] Custom Function #3
 [  ] Three new HTML elements/CSS Declarations
 
 Select ONE Additional 
@@ -11,7 +11,6 @@ Select ONE Additional
 [ no ] Feature 3 - Include Animation 
 [ no ] Feature 4 - Include random(__,__) 
 -->
-
 
 <!DOCTYPE html>
 <html>
@@ -25,7 +24,8 @@ Select ONE Additional
   </head>
 
   <body>
-    <h1>The Ocean</h1>
+    <h1>Emmas Aquariam</h1>
+    fishies in the sea
     <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
   </body>
 </html>
